--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10420,7 +10420,7 @@ a.text-dark:focus {
 }
 
 /*Start Section Style Description Page: made by David*/
-.block {
+/*.block {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
@@ -10432,9 +10432,9 @@ a.text-dark:focus {
   margin-left: 10rem;
   width: 17.5rem;
   height: 17.5rem;
-}  
+} */ 
     /*Style section 1 and 3 of Description page*/
-.block h2:nth-child(odd) { 
+/*.block h2:nth-child(odd) { 
   margin-left: 12.5rem;
   padding-right: 1rem;
   padding-bottom: 1rem;
@@ -10443,19 +10443,19 @@ a.text-dark:focus {
   margin-left: 5rem;
   width: 17.5rem;
   height: 17.5rem;
-}
-.block:nth-child(odd) {
+}*/
+/*.block:nth-child(odd) {
   background-color: #ce0033;
   color: #fff;
-}
+}*/
     /*End style section 1 and 3 of Description page*/
-.block:nth-child(even) {
-  background-color: #c9c9c9;
+/*.block:nth-child(even) {
+  background-color: #EFEFEF;
 }
 .carousel img{
   width:17.5rem;
   height: 17.5rem; 
-}
+}*/
 /*End Section Style Description Page*/
 
 
