add page nav.blade.php

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10419,7 +10419,6 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-<<<<<<< HEAD
 
 /*Start Section Style Description Page: made by David*/
 .block {
@@ -10507,10 +10506,6 @@ a.text-dark:focus {
 .title_projects {
   margin-bottom: 2em;
 }
-.list {
-  margin-top: 2em;
-  padding: 0;
-}
 .img-list {
   width:60%;
   margin:auto; 
@@ -10564,4 +10559,55 @@ a.text-dark:focus {
   box-shadow: 8px 0 8px -10px #000000,-8px 0 8px -10px #000000;
   min-height:50px; 
 }
-
+/*=========================================*/
+/*            view nav.blade.ph            */
+/*=========================================*/
+.simplonheader {
+    background-image: url(/img/header_rodez_panorama_flou.jpg);
+    background-size: cover;
+}
+.logo_simplon, .logos {
+}
+.simplonheader img {
+    margin-top: 2rem;
+    z-index: 1000;
+}
+.btn_logo {
+    background-color: #FFFFFF;
+    padding: 3px;
+    border-radius: 5px;
+    height: 60px;
+    width: 60px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+.img_logo {
+    height: 54px;
+    width: 54px;
+}
+    .sticky.is-sticky {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+}
+.navbarPrincipal {
+    background-color: #ce0033;
+    height: 50px;
+    min-height: 70px;
+    font-weight: bold;
+    z-index: 1000;
+    width: 100%;
+    color: #FFFFFF;
+}
+.menu {
+    color: #ffffff;
+}
+#navbarNav {
+    text-decoration: none;
+}
+a.menu:hover{
+    color: #ffffff!important;
+}
