adding changes on simplonFrance

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10428,3 +10428,76 @@ a.text-dark:focus {
   border-radius: 5px;
   box-shadow: 8px 0 8px -10px #000000,-8px 0 8px -10px #000000;
 }
+
+.block {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.block i {
+  margin-top: 4rem;
+  margin-left: 10rem;
+  width: 17.5rem;
+  height: 17.5rem;
+}  
+.block h2:nth-child(odd){ 
+  margin-left: 12.5rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+}
+.block img:nth-child(odd){
+  margin-left: 5rem;
+  width: 17.5rem;
+  height: 17.5rem;
+}
+.carousel img{
+  width:80rem;
+  height: 30rem; 
+}
+.block:nth-child(odd){
+  background-color: #ffffff;
+}
+.block:nth-child(even) {
+    background-color: #efefef;
+}
+.block img{
+  margin-left: 5rem;
+  width: 30rem;
+  height: 30rem;
+}
+.prgp{
+  margin-left: 5rem;
+}
+.psr{
+  margin-left: 6rem;
+}
+.p-2{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: 5rem;  
+}
+#line{
+  height: 12rem;
+  width: 12rem;
+}
+#first{
+  margin-right: 6rem;
+}
+#second{
+  margin-right: 6rem; 
+}
+.block img{
+    margin-left: 5rem;
+    width: 17.5rem;
+    height: 17.5rem;
+}
+.prgp{
+    margin-left: 5rem;
+}
+.psr{
+    margin-left: 6rem;
+}
+.p-2{
+    margin-top: 2rem;
+    margin-left: 1.5rem;
+    margin-bottom: 2rem;
+}
