--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10417,25 +10417,98 @@ a.text-dark:focus {
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
-
-
-
-
-/*===================================================*/
-/*Start Section Style Description Page: made by David*/
-/*===================================================*/
-    /*===============================================*/ 
-    /*   Style section 1 and 3 of Description page   */
-    /*===============================================*/ 
-    /*===================================================*/   
-    /*   End style section 1 and 3 of Description page   */
-    /*===================================================*/  
-/*=========================================*/
-/*   End Section Style Description Page    */
-/*=========================================*/
-/*=========================================*/
-/*   View descriptiveProject.blade.ph      */
-/*=========================================*/
+/***************************************/
+/*   C.S.S Description Page by David   */
+/***************************************/
+  /**************************************/
+  /*   Style general of section Block   */
+  /**************************************/
+.block {
+  height: 30rem;
+  background-color: #efefef;
+}
+.block h2 {
+  padding-bottom: 5%;
+}
+.block h4 {
+  text-align: right;
+  padding-bottom: 20%;
+  padding-right: 10%;
+  color: #000;
+} 
+.block i {
+  text-align: center;
+  color: #ce0033;
+}
+.block p {
+  text-align: justify;
+  padding-top: 1%; 
+}
+  /******************************************/
+  /*   End style general of section Block   */
+  /******************************************/
+  /***************************/
+  /*   Style Block 1 and 3   */
+  /***************************/
+.block1 h1, .block3 h1 {
+  padding-top: 10%;
+  padding-bottom: 3.5%;
+  text-align: center;
+  color: #ce0033;
+}
+.block1 p, .block3 p {
+  padding-right: 10%;
+}
+.block3 img {
+  margin-left: 23.5%;
+  border-radius: 5%;
+  border: solid 3px #000;
+}
+  /*******************************/
+  /*   End style Block 1 and 3   */
+  /*******************************/
+  /*********************/
+  /*   Style Block 2   */
+  /*********************/
+.block2 {
+  background-color: #fff;
+  text-align: right;
+}
+.block2 h1 {
+  padding-top: 10%;
+  padding-bottom: 3.5%;
+  text-align: center;
+  color: #ce0033; 
+}
+.block2 p {
+  margin-left: 10%;
+}
+.block2 img {
+  margin-right: 23.5%;
+  border-radius: 5%;
+  border: solid 3px #ec0033;
+}
+  /*************************/
+  /*   End style Block 2   */
+  /*************************/
+#carouselDescription {
+  color: #000;
+  padding-top: 10%;
+}
+.description {
+  height: 50rem;
+}
+.carouselIcon {
+  font-size: 5rem;
+}
+.imgDescription {
+  width: 20rem;
+  height: 15rem;
+  margin-top: 2%;
+}
+/*******************************************/ 
+/*   End C.S.S Description Page by David   */
+/*******************************************/ 
 .img-project {
   width: 17.5rem;
   height: 17.5rem;
