--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10423,26 +10423,47 @@ a.text-dark:focus {
   /**************************************/
   /*   Style general of section Block   */
   /**************************************/
-.blockD {
+.block {
   height: 30rem;
   background-color: #efefef;
 }
-.blockD h2 {
+.block h1 {
+  padding-top: 10%;
+  padding-bottom: 3.5%;
+  text-align: center;
+  color: #ce0033;
+}
+.block h2 {
   padding-bottom: 5%;
 }
-.blockD h4 {
+.block h4 {
   text-align: right;
   padding-bottom: 20%;
   padding-right: 10%;
   color: #000;
 } 
-.blockD i {
+.block i {
   text-align: center;
   color: #ce0033;
 }
-.blockD p {
+.block p {
   text-align: justify;
   padding-top: 1%; 
+}
+#carouselDescription {
+  color: #000;
+  padding-top: 10%;
+}
+.description {
+  height: 50rem;
+}
+.carouselIcon {
+  font-size: 5rem;
+}
+.imgDescription {
+  width: 20rem;
+  height: 15rem;
+  margin-top: 2%;
 }
   /******************************************/
   /*   End style general of section Block   */
@@ -10450,12 +10471,6 @@ a.text-dark:focus {
   /***************************/
   /*   Style Block 1 and 3   */
   /***************************/
-.block1 h1, .block3 h1 {
-  padding-top: 10%;
-  padding-bottom: 3.5%;
-  text-align: center;
-  color: #ce0033;
-}
 .block1 p, .block3 p {
   padding-right: 10%;
 }
@@ -10474,8 +10489,9 @@ a.text-dark:focus {
   background-color: #fff;
   text-align: right;
 }
-.block2 h1 {
-  padding-top: 10%;
+                                     /****************************************/  
+.block2 h1, .block5 h1 {             /*   block5 use style for h1 of block 2 */
+  padding-top: 10%;                  /****************************************/
   padding-bottom: 3.5%;
   text-align: center;
   color: #ce0033; 
@@ -10491,24 +10507,67 @@ a.text-dark:focus {
   /*************************/
   /*   End style Block 2   */
   /*************************/
-#carouselDescription {
-  color: #000;
-  padding-top: 10%;
-}
-.description {
-  height: 50rem;
-}
-.carouselIcon {
-  font-size: 5rem;
-}
-.imgDescription {
-  width: 20rem;
-  height: 15rem;
-  margin-top: 2%;
-}
 /*******************************************/ 
 /*   End C.S.S Description Page by David   */
 /*******************************************/ 
+/******************************************/
+/*   C.S.S Simplon France Page by David   */
+/******************************************/
+.block4 img {
+  margin-left: 30%;
+  border-radius: 5%;
+  border: solid 3px #000;
+}
+.block4 p {
+  padding-right: 25%;
+  padding-bottom: 10%;
+}
+.block5 {
+  background-color: #fff;
+}
+.block5 h2 {
+  text-align: right;
+}
+.block5 img {
+margin-left: 30%;
+border-radius: 5%;
+border: solid 3px #ec0033;
+}
+.block5 p {
+  padding-left: 25%;
+  padding-bottom: 10%;
+}
+.block6 h1 {
+  margin-top: -5%;
+}
+.block6 h2, .block6 p {
+  text-align: center;
+}
+.allLogoPartners {
+  padding-left: 7.5%;
+}
+.imgSimplon {
+  width: 15rem;
+  height: 15rem;
+  margin-top: 2%;
+}
+.imgCarousel {
+  width: 80.25rem;
+  height: 35rem;
+}
+.imgPartners {
+  width: 10rem;
+  height: 5rem;
+  margin: 1%;
+  padding: 1%;
+}
+.rmiLogo {  
+  width: 10rem;
+  height: 10rem;
+}
+/**********************************************/
+/*   End C.S.S Simplon France Page by David   */
+/**********************************************/
 .img-project {
   width: 17.5rem;
   height: 17.5rem;
@@ -10600,81 +10659,8 @@ a.text-dark:focus {
   box-shadow: 8px 0 8px -10px #000000,-8px 0 8px -10px #000000;
   min-height:50px; 
 }
-<<<<<<< HEAD
 
-<<<<<<< HEAD
-.block {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-.block i {
-  margin-top: 4rem;
-  margin-left: 10rem;
-  width: 17.5rem;
-  height: 17.5rem;
-}  
-.block h2:nth-child(odd){ 
-  margin-left: 12.5rem;
-  padding-right: 1rem;
-  padding-bottom: 1rem;
-}
-.block img:nth-child(odd){
-  margin-left: 5rem;
-  width: 17.5rem;
-  height: 17.5rem;
-}
-.carousel img{
-  width:80rem;
-  height: 30rem; 
-}
-.block:nth-child(odd){
-  background-color: #ffffff;
-}
-.block:nth-child(even) {
-    background-color: #efefef;
-}
-.block img{
-  margin-left: 5rem;
-  width: 30rem;
-  height: 30rem;
-}
-.prgp{
-  margin-left: 5rem;
-}
-.psr{
-  margin-left: 6rem;
-}
-.p-2{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  margin-left: 5rem;  
-}
-#line{
-  height: 12rem;
-  width: 12rem;
-}
-#first{
-  margin-right: 6rem;
-}
-#second{
-  margin-right: 6rem; 
-}
-.block img{
-    margin-left: 5rem;
-    width: 17.5rem;
-    height: 17.5rem;
-}
-.prgp{
-    margin-left: 5rem;
-}
-.psr{
-    margin-left: 6rem;
-}
-.p-2{
-    margin-top: 2rem;
-    margin-left: 1.5rem;
-    margin-bottom: 2rem;
-}
+
 
 
 /*=========================================*/
