--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10600,9 +10600,6 @@ a.text-dark:focus {
   box-shadow: 8px 0 8px -10px #000000,-8px 0 8px -10px #000000;
   min-height:50px; 
 }
-<<<<<<< HEAD
-
-<<<<<<< HEAD
 .block {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -10678,12 +10675,12 @@ a.text-dark:focus {
 
 
 /*=========================================*/
-/*            view nav.blade.ph            */
+/*            view header.blade.ph            */
 /*=========================================*/
 .simplonheader {
   background-image: url(/img/header_rodez_panorama_flou.jpg);
   background-size: cover;
-  min-height: 100vh;
+  min-height: 88vh;
 }
 
 .simplonlogo {
@@ -10696,6 +10693,11 @@ a.text-dark:focus {
 .simplonheader img {
     margin-top: 2rem;
 }
+
+/*=========================================*/
+/*            view nav.blade.ph            */
+/*=========================================*/
+
 .btn_logo {
     background-color: #FFFFFF;
     padding: 3px;
