--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10423,7 +10423,7 @@ a.text-dark:focus {
   /**************************************/
   /*   Style general of section Block   */
   /**************************************/
-.blockD {
+/*.blockD {
   height: 30rem;
   background-color: #efefef;
 }
@@ -10443,14 +10443,14 @@ a.text-dark:focus {
 .blockD p {
   text-align: justify;
   padding-top: 1%; 
-}
+}*/
   /******************************************/
   /*   End style general of section Block   */
   /******************************************/
   /***************************/
   /*   Style Block 1 and 3   */
-  /***************************/
-.block1 h1, .block3 h1 {
+/*  /***************************/
+/*.block1 h1, .block3 h1 {
   padding-top: 10%;
   padding-bottom: 3.5%;
   text-align: center;
@@ -10464,13 +10464,13 @@ a.text-dark:focus {
   border-radius: 5%;
   border: solid 3px #000;
 }
-  /*******************************/
+*/  /*******************************/
   /*   End style Block 1 and 3   */
   /*******************************/
   /*********************/
   /*   Style Block 2   */
   /*********************/
-.block2 {
+/*.block2 {
   background-color: #fff;
   text-align: right;
 }
@@ -10487,11 +10487,11 @@ a.text-dark:focus {
   margin-right: 23.5%;
   border-radius: 5%;
   border: solid 3px #ec0033;
-}
+}*/
   /*************************/
   /*   End style Block 2   */
   /*************************/
-#carouselDescription {
+/*#carouselDescription {
   color: #000;
   padding-top: 10%;
 }
@@ -10505,7 +10505,7 @@ a.text-dark:focus {
   width: 20rem;
   height: 15rem;
   margin-top: 2%;
-}
+}*/
 /*******************************************/ 
 /*   End C.S.S Description Page by David   */
 /*******************************************/ 
@@ -10600,7 +10600,8 @@ a.text-dark:focus {
   box-shadow: 8px 0 8px -10px #000000,-8px 0 8px -10px #000000;
   min-height:50px; 
 }
-.block {
+/*COCO*/
+/*.block {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
@@ -10671,7 +10672,7 @@ a.text-dark:focus {
     margin-top: 2rem;
     margin-left: 1.5rem;
     margin-bottom: 2rem;
-}
+}*/
 
 
 /*=========================================*/
@@ -10869,3 +10870,154 @@ a.socialIcon:hover, .socialHoverClass {
     transition: all 0.8s;
 }
 
+/***************************************/
+/*   C.S.S Description Page by David   */
+/***************************************/
+  /**************************************/
+  /*   Style general of section Block   */
+  /**************************************/
+.block {
+  height: 30rem;
+  background-color: #efefef;
+}
+.block h1 {
+  padding-top: 10%;
+  padding-bottom: 3.5%;
+  text-align: center;
+  color: #ce0033;
+}
+.block h2 {
+  padding-bottom: 5%;
+}
+.block h4 {
+  text-align: right;
+  padding-bottom: 20%;
+  padding-right: 10%;
+  color: #000;
+} 
+.block i {
+  text-align: center;
+  color: #ce0033;
+}
+.block p {
+  text-align: justify;
+  padding-top: 1%; 
+}
+#carouselDescription {
+  color: #000;
+  padding-top: 10%;
+}
+.description {
+  height: 50rem;
+}
+.carouselIcon {
+  font-size: 5rem;
+}
+.imgDescription {
+  width: 20rem;
+  height: 15rem;
+  margin-top: 2%;
+}
+  /******************************************/
+  /*   End style general of section Block   */
+  /******************************************/
+  /***************************/
+  /*   Style Block 1 and 3   */
+  /***************************/
+.block1 p, .block3 p {
+  padding-right: 10%;
+}
+.block3 img {
+  margin-left: 23.5%;
+  border-radius: 5%;
+  border: solid 3px #000;
+}
+  /*******************************/
+  /*   End style Block 1 and 3   */
+  /*******************************/
+  /*********************/
+  /*   Style Block 2   */
+  /*********************/
+.block2 {
+  background-color: #fff;
+  text-align: right;
+}
+                                     /****************************************/  
+.block2 h1, .block5 h1 {             /*   block5 use style for h1 of block 2 */
+  padding-top: 10%;                  /****************************************/
+  padding-bottom: 3.5%;
+  text-align: center;
+  color: #ce0033; 
+}
+.block2 p {
+  margin-left: 10%;
+}
+.block2 img {
+  margin-right: 23.5%;
+  border-radius: 5%;
+  border: solid 3px #ec0033;
+}
+  /*************************/
+  /*   End style Block 2   */
+  /*************************/
+/*******************************************/ 
+/*   End C.S.S Description Page by David   */
+/*******************************************/ 
+/******************************************/
+/*   C.S.S Simplon France Page by David   */
+/******************************************/
+.block4 img {
+  margin-left: 30%;
+  border-radius: 5%;
+  border: solid 3px #000;
+}
+.block4 p {
+  padding-right: 25%;
+  padding-bottom: 10%;
+}
+.block5 {
+  background-color: #fff;
+}
+.block5 h2 {
+  text-align: right;
+}
+.block5 img {
+margin-left: 30%;
+border-radius: 5%;
+border: solid 3px #ec0033;
+}
+.block5 p {
+  padding-left: 25%;
+  padding-bottom: 10%;
+}
+.block6 h1 {
+  margin-top: -5%;
+}
+.block6 h2, .block6 p {
+  text-align: center;
+}
+.allLogoPartners {
+  padding-left: 7.5%;
+}
+.imgSimplon {
+  width: 15rem;
+  height: 15rem;
+  margin-top: 2%;
+}
+.imgCarousel {
+  width: 80.25rem;
+  height: 35rem;
+}
+.imgPartners {
+  width: 10rem;
+  height: 5rem;
+  margin: 1%;
+  padding: 1%;
+}
+.rmiLogo {  
+  width: 10rem;
+  height: 10rem;
+}
+/**********************************************/
+/*   End C.S.S Simplon France Page by David   */
+/**********************************************/
