--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10554,8 +10554,8 @@ a.text-dark:focus {
 .img-list {
   width:60%;
   margin:auto; 
-  margin-top: 1.5em;  
-  padding-top: 1em;
+  margin-top: 1.2em;  
+  /*padding-top: 1em;*/
 }
 .list {
   margin-top: 2em;
@@ -10584,9 +10584,10 @@ a.text-dark:focus {
 }
 .news-sr, .carousel-sr {
   margin-top: 3em;
+  margin-bottom: 3em;
 }
 .link-news {
-  margin-top: 3em;
+  margin-top: 2em;
 }
 .presentation_h3 {
   margin-top: 2em;
@@ -10711,7 +10712,7 @@ a.text-dark:focus {
 
 .btn_logo {
     background-color: #FFFFFF;
-    padding: 0.5rem;
+    padding: 3px;
     border-radius: 5px;
     height: 60px;
     width: 60px;
@@ -10721,6 +10722,7 @@ a.text-dark:focus {
 .img_logo {
     height: 54px;
     width: 54px;
+    padding-bottom: 0.25em;
 }
 
 .sticky.is-sticky {
